[package]
name = "lombok-rs"
version = "0.4.0"
description = "Lombok port for Rust"
authors = [
    "sokomishalov <sokomishalov@mail.ru>",
    "<jerrychir> jerrychir@gmail.com",
]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerrychir/lombok-rs"
documentation = "https://docs.rs/lombok-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
